# universal-agentic-cli

./: .gitignore  CLAUDE.md  DOMAINS.md  HOOMAN.md  PLAN.md  PRODUCT.md  README.md  REQUIREMENTS.md  STRUCTURE.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
agents/: drafter.yaml  researcher.yaml  reviewer.yaml
docs/: agent-manifests.md  architecture.md  contributing.md
examples/: simple_pipeline.yaml
src/uac/: __init__.py  cli.py
src/uac/cli_commands/: __init__.py  _output.py  agents.py  inspect.py  run.py  tools.py
src/uac/protocols/: __init__.py  dispatcher.py  errors.py  provider.py
src/uac/runtime/: __init__.py  dispatcher.py  errors.py
src/uac/sdk/: __init__.py  errors.py  models.py  workflow.py
src/uac/utils/: reflexion.py  telemetry.py
tests/: test_smoke.py
tests/cli/: test_cli_agents.py  test_cli_inspect.py  test_cli_run.py  test_cli_tools.py
tests/core/blackboard/: test_backend.py  test_blackboard.py  test_models.py  test_slicer.py
tests/core/context/: test_counter.py  test_counter_registry.py  test_manager.py  test_pruner.py  test_summarizer.py  test_vector_offload.py
tests/core/interface/: test_client.py  test_client_integration.py  test_models.py  (+1 more)
tests/e2e/: conftest.py  test_hotswap_e2e.py  test_mcp_e2e.py  test_pipeline_e2e.py  test_star_e2e.py
tests/protocols/: test_dispatcher.py  test_provider.py
tests/runtime/: test_dispatcher.py  test_errors.py
tests/sdk/: test_models.py  test_workflow_loader.py  test_workflow_runner.py
tests/utils/: test_reflexion.py  test_telemetry.py
(+81 files in other folders)
